<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nextActivity"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changePassword"
        android:textSize="35sp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:textColor="#123C50"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newPassword"
        android:gravity="left"
        android:textSize="30sp"
        android:fontFamily="sans-serif"
        android:textColor="#2F47CA"
        android:layout_marginTop="45dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterNewPassword"
        android:textSize="20sp"
        android:fontFamily="sans-serif-condensed"
        android:textColorHint="#22A1B1"
        android:gravity="left"
        android:inputType="text"
        android:id="@+id/etNewPass"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmPassword"
        android:gravity="left"
        android:textSize="30sp"
        android:fontFamily="sans-serif"
        android:textColor="#2F47CA"
        android:layout_marginTop="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterConfirmPassword"
        android:textSize="20sp"
        android:fontFamily="sans-serif-condensed"
        android:textColorHint="#22A1B1"
        android:gravity="left"
        android:inputType="text"
        android:id="@+id/etConfirmPass"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnDone"
        android:text="@string/Done"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>
</LinearLayout>






