<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ForgotPasswordActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgotPassword"
        android:textSize="30sp"
        android:gravity="center"
        android:fontFamily="sans-serif-black"
        android:textColor="#ED0D0D"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="#1E2861"
        android:textSize="25sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterEmailAddress"
        android:inputType="text"
        android:fontFamily="sans-serif-condensed"
        android:textSize="20sp"
        android:textColorHint="#639A95"
        android:id="@+id/email"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/getOTP"
        android:fontFamily="sans-serif-black"
        android:textSize="20sp"
        android:id="@+id/btnGetOTP"
        android:layout_marginTop="20dp"/>
</LinearLayout>